--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,11 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
+.title-fonts - фон заголовка текста
+
+.body-section-style - стиль заголовков в боди
+
+.title-fonts-third-section - стиль 4 блока заголовка, не жирный
+
+.fourth-section-img - картинки 
