--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,19 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --accent-color: #FF0070;
+  --text-color: #F1B2CE;
+  --bg-image: url(../images/cover-image-dark.png);
+  --accent-title: #DB00FF;
+  --dec-text: #000028;
+  --bg-color: #000028;
+  --accent-section: #FF0070;
+  --dec-bg: #FF0070;
+  --hover: rgba(255, 0, 112, 0.40);
 }
+
+.page.theme_dark .rec-style {
+  display: block;
+}
+
+
