--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,16 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
-.title-fonts 
+.title-fonts {
+  
+}
 /* - фон заголовка текста */
 
 .body-section-style 
 /* - стиль заголовков в боди */
 
-.title-fonts-third-section 
+.title-fonts-third-section {
+  }
 /* - стиль 4 блока заголовка, не жирный */
 
 .fourth-section {
@@ -25,13 +28,397 @@
   }
 }
 
-.section__picture-header {
+.fourth-section-body {
   margin-block-end: 10px;
 
   @media (min-width: 768px) {
     margin-block-end: 20px;
   }
+} 
+
+
+
+.img-block img {
+  width: 100%;
+  height: auto;
 }
+
+
+.page {
+  font-family: 'IBM Plex Mono', monospace;
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  height: 100vh;
+  min-height: 668px;
+  margin-block-end: 40px;
+  padding: 10px;
+
+  @media (min-width: 768px) {
+    margin-block-end: 60px;
+    padding: 20px 20px 20px 0;
+  }
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-inline-start: 1px solid var(--accent-section);
+  border-block-end: 1px solid var(--accent-section);
+}
+
+@media (min-width: 768px) {
+  .decorated-zone::after {
+    bottom: 20px;
+    left: 20px;
+  }
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-inline-end: 1px solid var(--accent-section);
+  border-block-start: 1px solid var(--accent-section);
+}
+
+@media (min-width: 768px) {
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+}
+
+.rec-style {
+  position: absolute;
+  color: var(--accent-color);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.39;
+  text-transform: uppercase;
+  inset-block-start: 10px;
+  inset-inline-end: 38px;
+
+  @media (min-width: 768px) {
+    inset-block-start: 20px;
+    inset-inline-end: 48px;
+  }
+}
+
+.rec-style::after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px var(--accent-color);
+  background-color: var(--accent-color);
+  inset-block-start: -18px;
+  inset-inline-start: 40px;
+}
+
+.header__theme-menu {
+  display: flex;
+  justify-self: end;
+  align-items: center;
+  color: var(--accent-section);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1;
+
+  @media (min-width: 1024px) {
+    justify-self: center;
+    align-self: self-start;
+  }
+}
+
+/*Начало Стили заголовка страницы */
+.title {
+  display: flex;
+  justify-self: start;
+  align-items: center;
+  margin-block-end: 10px;
+  color: var(--accent-title);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0 var(--dec-bg);
+  padding-block-start: 15px;
+
+  @media (min-width: 768px) {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  @media (min-width: 1024px) {
+    text-shadow: 4px 4px 0 var(--accent-color);
+  }
+}
+
+.subtitle {
+  justify-self: end;
+  align-self: center;
+  max-width: 355px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.3;
+  margin-block-end: 15px;
+
+  @media (min-width: 768px) {
+    max-width: 364px;
+  }
+
+  @media (min-width: 1024px) {
+    max-width: 491px;
+  }
+}
+/*Конец Стили заголовка страницы */
+
+/*Начало Общие стили проекта*/
+.title-fonts {
+  color: var(--dec-text);
+  background-color: var(--dec-bg);
+}
+
+/*Конец Общие стили проекта*/
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+    gap: 10px;
+    padding-inline-start: 20px;
+  }
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 0 13px;
+  text-transform: lowercase;
+  background-color: transparent;
+  cursor: pointer;
+  height: 26px;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--hover);
+  outline: none;
+}
+
+.header__theme-menu-button:focus {
+  border: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--accent-section);
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-section);
+  pointer-events: none;
+}
+/* Общие стили к секциям */
+
+/* стиль тела секции */
+.body-section-style {
+  font-size: 18px;
+  line-height: 1.3;
+}
+/* стиль загаловка секции */
+.name-paragrph-style {
+  margin-block-end: 10px;
+  font-size: 18px;
+}
+/* стиль текста секции */
+.text-paragraph-style {
+  margin-block-end: 10px;
+  color: var(--text-color);
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.article-style {
+  margin-block-end: 20px;
+}
+
+.article-style .text-paragraph-style:last-child {
+  margin-block-end: 0;
+}
+
+section .article-style:last-child {
+  margin-block-end: 0;
+}
+/* Начало 1 секции */
+.first-section {
+  display: flex;
+  flex-direction: column;
+  margin-block-end: 50px;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    gap: 20px;
+    margin-block-end: 80px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+}
+
+.first-section-body {
+  margin-block-end: 20px;
+  color: var(--accent-section);
+
+  /* стили для элемента при ширине экрана не менее 768px */
+  @media (min-width: 768px) {
+    min-width: 236px;
+    margin-block-end: 0;
+  }
+
+  /* стили для элемента при ширине экрана не менее 1024px */
+  @media (min-width: 1024px) {
+    min-width: 315px;
+  }
+}
+
+/* Гипперссылки в тексте */
+.text-link {
+  text-decoration: none;
+  /* тень тексту */
+  text-shadow: 1px 1px 0 var(--dec-bg);
+  cursor: pointer;
+}
+
+.text-link:hover {
+  /* граница при наведении на элемент */
+  border-block-end: 1px solid var(--text-color);
+}
+
+.text-link:focus {
+  border: none;
+}
+
+.text-link:focus-visible {
+  /* граница при фокусировке на элементе */
+  border: 1px solid var(--text-color);
+  outline: none;
+}
+
+/* начало второй  секции */
+
+.second-section {
+  margin-block-end: 50px;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+
+  /* стили для элемента при ширине экрана не менее 768px */
+  @media (min-width: 768px) {
+    margin-block-end: 80px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+}
+
+.second-section-body {
+  margin-block-end: 20px;
+  /* цвет текста через переменную */
+  color: var(--accent-section);
+
+  /* стили для элемента при ширине экрана не менее 768px */
+  @media (min-width: 768px) {
+    max-width: 236px;
+  }
+
+  /* стили для элемента при ширине экрана не менее 1024px */
+  @media (min-width: 1024px) {
+    max-width: 315px;
+  }
+}
+
+.section-second-text {
+  /* стили для элемента при ширине экрана не менее 1024px */
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .article-style {
+    /* стили для элемента при ширине экрана не менее 1024px */
+    @media (min-width: 1024px) {
+      width: 314px;
+      margin-block-end: 0;
+      flex-grow: 1;
+    }
+  }
+}
+
+/* Начало 3 секции */
+
+.third-section {
+  margin-block-end: 50px;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+
+  /* стили для элемента при ширине экрана не менее 768px */
+  @media (min-width: 768px) {
+    display: flex;
+    gap: 20px;
+    margin-block-end: 80px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+}
+
+.third-section-body {
+  margin-block-end: 20px;
+  /* цвет текста через переменную */
+  color: var(--accent-section);
+
+  /* стили для элемента при ширине экрана не менее 768px */
+  @media (min-width: 768px) {
+    /* минимальная ширина при ширине экрана не менее 768px */
+    min-width: 236px;
+    margin-block-end: 0;
+  }
+
+  /* стили для элемента при ширине экрана не менее 1024px */
+  @media (min-width: 1024px) {
+    min-width: 315px;
+  }
+}
+
+.third-main-tittle {
+  margin-block-end: 20px;
+}
+
+.title-fonts-third-section {
+  margin-block-end: 10px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+/* Картинки */
 
 .img-block {
   display: flex;
@@ -41,7 +428,8 @@
   max-width: 648px;
   margin-inline-start: auto;
   margin-inline-end: auto;
-
+  
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     display: grid;
     gap: 20px;
@@ -50,43 +438,91 @@
     .sunset-img {
       grid-column: 1 / span 2;
       grid-row: 1;
-      width: 649px;
-      height: 260px;
+      max-width: 100%;
+      height: auto;
       object-fit: cover;
     }
 
     .ice-cream-img {
       grid-column: 3;
       grid-row: 1 / span 2;
-      width: 315px;
-      height: 595px;
+      max-width: 100%;
+      height: auto; 
       object-fit: cover;
+       align-self: stretch;
     }
 
     .hipster-casset-img {
       grid-column: 1;
       grid-row: 2 / span 2;
-      width: 315px;
-      height: 768px;
+      max-width: 100%;
+      height: auto; 
       object-fit: cover;
+      align-self: stretch;
+
     }
 
     .books-img {
       grid-column: 2;
       grid-row: 2;
-      width: 315px;
-      height: 315px;
+      max-width: 100%;
+      height: auto; 
       object-fit: cover;
+      
     }
 
     .street-img {
       grid-column: 2 / span 2;
       grid-row: 3;
-      width: 649px;
-      height: 428px;
+      max-width: 100%;
+      height: auto;
       object-fit: cover;
+      align-self: stretch;
     }
   }
 }
 
+.fourth-section-body {
+  margin-block-end: 10px;
 
+  @media (min-width: 768px) {
+    margin-block-end: 20px;
+  }
+}
+
+/* Подвал */
+.footer-title {
+  position: relative;
+  display: grid;
+  height: 100vh;
+  min-height: 668px;
+  padding: 10px;
+
+  /* При ширине экрана не менее 768px устанавливается другое значение отступа */
+  @media (min-width: 768px) {
+    padding: 20px;
+  } 
+}
+
+.footer-subtitle {
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  /* Устанавливает цвет текста через переменную */
+  color: var(--accent-title);
+  /* Устанавливает размер шрифта в зависимости от размера окна */
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  /* Устанавливает высоту линии текста */
+  line-height: 82.5%;
+  text-shadow: 2px 2px 0 var(--dec-bg);
+
+  @media (min-width: 768px) {
+    /* Устанавливает другой размер шрифта при ширине экрана не менее 768px */
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  @media (min-width: 1024px) {
+    /* Устанавливает другое значение тени текста при ширине экрана не менее 1024px */
+    text-shadow: 2px 2px 0 var(--accent-color);
+  }
+}
