--- a/styles/light.css
+++ b/styles/light.css
@@ -8,11 +8,11 @@
   --accent-color: #FF0070;
   --text-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
-  --accent-title: #FFC2E6;
+  --color-title: #FFC2E6;
   --dec-text: #353430;
   --bg-color: #FFF1F7;
-  --accent-section: #353430;
-  --dec-bg: #FF8DCB;
+  --bottom-color: #353430;
+  --header-bg: #FF8DCB;
   --hover: rgba(50, 49, 45, 0.40);
 }
 
@@ -21,11 +21,11 @@
       --accent-color: #FF0070;
       --text-color: #353430;
       --bg-image: url(../images/cover-image-light.png);
-      --accent-title: #FFC2E6;
+      --color-title: #FFC2E6;
       --dec-text: #353430;
       --bg-color: #FFF1F7;
-      --accent-section: #353430;
-      --dec-bg: #FF8DCB;
+      --bottom-color: #353430;
+      ----header-bg: #FF8DCB;
       --hover: rgba(54, 53, 48, 0.4);
   } 
 } 
