--- a/styles/style.css
+++ b/styles/style.css
@@ -2,25 +2,20 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: 'IBM Plex Mono', monospace;
+  background-color: var(--bg-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
-
-.title-fonts {
-  
-}
-/* - фон заголовка текста */
-
-.body-section-style 
-/* - стиль заголовков в боди */
-
-.title-fonts-third-section {
-  }
-/* - стиль 4 блока заголовка, не жирный */
 
 .fourth-section {
   margin-block-end: 40px;
   padding-inline-start: 10px;
   padding-inline-end: 10px;
 
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     margin-block-end: 60px;
     padding-inline-start: 20px;
@@ -31,28 +26,11 @@
 .fourth-section-body {
   margin-block-end: 10px;
 
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     margin-block-end: 20px;
   }
 } 
-
-
-
-.img-block img {
-  width: 100%;
-  height: auto;
-}
-
-
-.page {
-  font-family: 'IBM Plex Mono', monospace;
-  background-color: var(--bg-color);
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-}
 
 .header {
   position: relative;
@@ -62,7 +40,13 @@
   min-height: 668px;
   margin-block-end: 40px;
   padding: 10px;
+  background-image: var(--bg-image);
+  background-size: cover; 
+  background-position: center;
+  width: 100%;
+ 
 
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     margin-block-end: 60px;
     padding: 20px 20px 20px 0;
@@ -76,14 +60,17 @@
   left: 10px;
   width: 25px;
   height: 25px;
-  border-inline-start: 1px solid var(--accent-section);
-  border-block-end: 1px solid var(--accent-section);
+  border-inline-start: 1px solid var(--bottom-style);
+  border-block-end: 1px solid var(--bottom-style);
+  
 }
 
+  /* стили для элемента при ширине экрана не менее 768px */
 @media (min-width: 768px) {
   .decorated-zone::after {
     bottom: 20px;
     left: 20px;
+    
   }
 }
 
@@ -94,10 +81,12 @@
   right: 10px;
   width: 25px;
   height: 25px;
-  border-inline-end: 1px solid var(--accent-section);
-  border-block-start: 1px solid var(--accent-section);
+  border-inline-end: 1px solid var(--bottom-style);
+  border-block-start: 1px solid var(--bottom-style);
+
 }
 
+/* стили для элемента при ширине экрана не менее 768px */
 @media (min-width: 768px) {
   .decorated-zone::before {
     top: 20px;
@@ -115,6 +104,7 @@
   inset-block-start: 10px;
   inset-inline-end: 38px;
 
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     inset-block-start: 20px;
     inset-inline-end: 48px;
@@ -138,11 +128,12 @@
   display: flex;
   justify-self: end;
   align-items: center;
-  color: var(--accent-section);
+  color: var(--bottom-style);
   font-weight: 400;
   font-size: 18px;
   line-height: 1;
 
+ /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
     justify-self: center;
     align-self: self-start;
@@ -155,16 +146,18 @@
   justify-self: start;
   align-items: center;
   margin-block-end: 10px;
-  color: var(--accent-title);
+  color: var(--color-title);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
   text-shadow: 4px 4px 0 var(--dec-bg);
   padding-block-start: 15px;
 
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
+  /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
     text-shadow: 4px 4px 0 var(--accent-color);
   }
@@ -179,10 +172,12 @@
   line-height: 1.3;
   margin-block-end: 15px;
 
+    /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     max-width: 364px;
   }
 
+    /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
     max-width: 491px;
   }
@@ -201,6 +196,7 @@
   flex-direction: column;
   gap: 13px;
 
+  /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
     flex-direction: row;
     gap: 10px;
@@ -227,12 +223,12 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--accent-section);
+  border-block-end: 1px solid var(--bottom-style);
   outline: none;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-section);
+  border: 1px solid var(--bottom-style);
   pointer-events: none;
 }
 /* Общие стили к секциям */
@@ -273,7 +269,8 @@ section .article-style:last-child {
   margin-block-end: 50px;
   padding-inline-start: 10px;
   padding-inline-end: 10px;
-
+  
+/* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     flex-direction: row;
     gap: 20px;
@@ -285,7 +282,7 @@ section .article-style:last-child {
 
 .first-section-body {
   margin-block-end: 20px;
-  color: var(--accent-section);
+  color: var(--bottom-style);
 
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
@@ -340,7 +337,7 @@ section .article-style:last-child {
 .second-section-body {
   margin-block-end: 20px;
   /* цвет текста через переменную */
-  color: var(--accent-section);
+  color: var(--bottom-style);
 
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
@@ -392,7 +389,7 @@ section .article-style:last-child {
 .third-section-body {
   margin-block-end: 20px;
   /* цвет текста через переменную */
-  color: var(--accent-section);
+  color: var(--bottom-style);
 
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
@@ -419,6 +416,11 @@ section .article-style:last-child {
 }
 
 /* Картинки */
+
+.img-block img {
+  width: 100%;
+  height: auto;
+}
 
 .img-block {
   display: flex;
@@ -509,7 +511,7 @@ section .article-style:last-child {
   justify-self: center;
   align-items: center;
   /* Устанавливает цвет текста через переменную */
-  color: var(--accent-title);
+  color: var(--color-title);
   /* Устанавливает размер шрифта в зависимости от размера окна */
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   /* Устанавливает высоту линии текста */
