--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,10 +6,10 @@
   --accent-color: #FF0070;
   --text-color: #F1B2CE;
   --bg-image: url(../images/cover-image-dark.png);
-  --accent-title: #DB00FF;
+  --color-title: #DB00FF;
   --dec-text: #000028;
   --bg-color: #000028;
-  --accent-section: #FF0070;
+  --bottom-style: #FF0070;
   --dec-bg: #FF0070;
   --hover: rgba(255, 0, 112, 0.40);
 }
