--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   background-color: var(--bg-color);
   background-repeat: no-repeat;
   background-position: center;
@@ -30,7 +30,7 @@
   @media (min-width: 768px) {
     margin-block-end: 20px;
   }
-} 
+}
 
 .header {
   position: relative;
@@ -41,10 +41,9 @@
   margin-block-end: 40px;
   padding: 10px;
   background-image: var(--bg-image);
-  background-size: cover; 
+  background-size: cover;
   background-position: center;
   width: 100%;
- 
 
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
@@ -62,15 +61,13 @@
   height: 25px;
   border-inline-start: 1px solid var(--bottom-style);
   border-block-end: 1px solid var(--bottom-style);
-  
 }
 
-  /* стили для элемента при ширине экрана не менее 768px */
+/* стили для элемента при ширине экрана не менее 768px */
 @media (min-width: 768px) {
   .decorated-zone::after {
     bottom: 20px;
     left: 20px;
-    
   }
 }
 
@@ -83,7 +80,6 @@
   height: 25px;
   border-inline-end: 1px solid var(--bottom-style);
   border-block-start: 1px solid var(--bottom-style);
-
 }
 
 /* стили для элемента при ширине экрана не менее 768px */
@@ -133,7 +129,7 @@
   font-size: 18px;
   line-height: 1;
 
- /* стили для элемента при ширине экрана не менее 1024px */
+  /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
     justify-self: center;
     align-self: self-start;
@@ -172,12 +168,12 @@
   line-height: 1.3;
   margin-block-end: 15px;
 
-    /* стили для элемента при ширине экрана не менее 768px */
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     max-width: 364px;
   }
 
-    /* стили для элемента при ширине экрана не менее 1024px */
+  /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
     max-width: 491px;
   }
@@ -255,13 +251,14 @@
   margin-block-end: 20px;
 }
 
-.article-style .text-paragraph-style:last-child {
+/* .article-style .text-paragraph-style:last-child {
   margin-block-end: 0;
 }
 
-section .article-style:last-child {
+.section .article-style:last-child {
   margin-block-end: 0;
-}
+} 
+
 /* Начало 1 секции */
 .first-section {
   display: flex;
@@ -269,8 +266,8 @@ section .article-style:last-child {
   margin-block-end: 50px;
   padding-inline-start: 10px;
   padding-inline-end: 10px;
-  
-/* стили для элемента при ширине экрана не менее 768px */
+
+  /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     flex-direction: row;
     gap: 20px;
@@ -369,6 +366,23 @@ section .article-style:last-child {
   }
 }
 
+.main-style-second-section {
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .article-style {
+    @media (min-width: 1024px) {
+      width: 314px;
+      margin-block-end: 0;
+      flex-grow: 1;
+    }
+  }
+}
+
 /* Начало 3 секции */
 
 .third-section {
@@ -417,9 +431,12 @@ section .article-style:last-child {
 
 /* Картинки */
 
-.img-block img {
-  width: 100%;
-  height: auto;
+.fourth-section-body {
+  margin-block-end: 10px;
+
+  @media (min-width: 768px) {
+    margin-block-end: 20px;
+  }
 }
 
 .img-block {
@@ -430,7 +447,7 @@ section .article-style:last-child {
   max-width: 648px;
   margin-inline-start: auto;
   margin-inline-end: auto;
-  
+
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     display: grid;
@@ -449,28 +466,26 @@ section .article-style:last-child {
       grid-column: 3;
       grid-row: 1 / span 2;
       max-width: 100%;
-      height: auto; 
+      height: auto;
       object-fit: cover;
-       align-self: stretch;
+      align-self: stretch;
     }
 
     .hipster-casset-img {
       grid-column: 1;
       grid-row: 2 / span 2;
       max-width: 100%;
-      height: auto; 
+      height: auto;
       object-fit: cover;
       align-self: stretch;
-
     }
 
     .books-img {
       grid-column: 2;
       grid-row: 2;
       max-width: 100%;
-      height: auto; 
+      height: auto;
       object-fit: cover;
-      
     }
 
     .street-img {
@@ -484,12 +499,9 @@ section .article-style:last-child {
   }
 }
 
-.fourth-section-body {
-  margin-block-end: 10px;
-
-  @media (min-width: 768px) {
-    margin-block-end: 20px;
-  }
+.img-block img {
+  width: 100%;
+  height: auto;
 }
 
 /* Подвал */
@@ -503,7 +515,7 @@ section .article-style:last-child {
   /* При ширине экрана не менее 768px устанавливается другое значение отступа */
   @media (min-width: 768px) {
     padding: 20px;
-  } 
+  }
 }
 
 .footer-subtitle {
