--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,6 @@
   @media (min-width: 1024px) {
     justify-self: center;
     align-self: self-start;
-    /* margin-block-start: -25px; */
   }
 }
 
@@ -154,6 +153,7 @@
     max-width: 491px;
   }
 }
+
 /*Конец Стили заголовка страницы */
 
 .title-fonts {
@@ -165,11 +165,11 @@
   margin-block-end: 10px; 
   font-size: 18px;
 }
-
+ /* Изменен gap */
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 13px;
+  gap: 10px;
 
   /* стили для элемента при ширине экрана не менее 1024px */
   @media (min-width: 1024px) {
@@ -214,7 +214,6 @@
   line-height: 1.3;
 } 
 
-
 .name-paragrph-style {
   margin-block-end: 10px;
   font-size: 18px;
@@ -229,7 +228,6 @@
 
 .article-style {
   margin-block-end: 20px;
-  
 }
 
 .article-style .text-paragraph-style:last-child {
@@ -241,6 +239,7 @@ section .article-style:last-child {
 }
 
 /* Начало 1 секции */
+
 .first-section {
   display: flex;
   flex-direction: column;
@@ -262,7 +261,6 @@ section .article-style:last-child {
   margin-block-end: 20px;
   color: var(--bottom-style);
   
-
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     min-width: 236px;
@@ -276,6 +274,7 @@ section .article-style:last-child {
 }
 
 /* Гипперссылки в тексте */
+
 .text-link {
   text-decoration: none;
   /* тень тексту */
@@ -305,7 +304,6 @@ section .article-style:last-child {
   padding-inline-start: 10px;
   padding-inline-end: 10px;
   
-
   /* стили для элемента при ширине экрана не менее 768px */
   @media (min-width: 768px) {
     margin-block-end: 80px;
@@ -485,6 +483,7 @@ section .article-style:last-child {
 }
 
 /* Подвал */
+
 .footer-title {
   position: relative;
   display: grid;
@@ -520,3 +519,4 @@ section .article-style:last-child {
     text-shadow: 2px 2px 0 var(--accent-color);
   }
 }
+
